tests/invalid/Final_Invalid_14.whiley
function f(int x) -> (int r):
    //
    final int y
    //
    switch(x):
        case 0:
            y = x
        default:
            return 0
    //    
    y = 0
    //
    return y